# University

./: README.md
Extra work & exams/APM/MySemaphore/: log.txt  log9.txt  pom.xml
Extra work & exams/APM/MySwitch/: log.txt  log4.txt  log9.txt  pom.xml  test.txt
Extra work & exams/Databases/: CinemaProductions.sql  CoffeeShops.sql  Olympics.sql  Poetry.sql  PracticalExam2022.sql  TrainSchedule.sql
Extra work & exams/FP/Final EXAM/: input.txt  main.py
Extra work & exams/FP/Partial exam 1/: code_runners.py  functions.py  ui.py
Extra work & exams/FP/Partial exam 2/: main.py
Extra work & exams/OOP/Final EXAM/: CMakeLists.txt  Observer.cpp  Observer.h  Post.cpp  Post.h  PostRepo.cpp  PostRepo.h  Topic.cpp  Topic.h  Topics.cpp  Topics.h  User.cpp  User.h  UserRepo.cpp  UserRepo.h  main.cpp  pinput.txt  tinput.txt  ui_UserGUI.h  usergui.cpp  usergui.h  usergui.ui
Extra work & exams/OOP/Partial Exam 1/: CMakeLists.txt  Domain.cpp  Domain.h  Repository.cpp  Repository.h  Service.cpp  Service.h  UI.cpp  UI.h  main.cpp
Extra work & exams/OOP/Partial Exam 2/: CMakeLists.txt  Car.cpp  Car.h  ElectricEngine.cpp  ElectricEngine.h  Engine.cpp  Engine.h  Service.cpp  Service.h  TurboEngine.cpp  TurboEngine.h  UI.cpp  UI.h  main.cpp
Extra work & exams/OOP/Partial Exam 3/: CMakeLists.txt  Document.cpp  Document.h  Repository.cpp  Repository.h  gui.cpp  gui.h  gui.ui  input.txt  main.cpp  ui_GUI.h
Extra work & exams/OOP/QnA App GUI/: Answer.cpp  Answer.h  AnswerRepo.cpp  AnswerRepo.h  CMakeLists.txt  Observer.cpp  Observer.h  Question.cpp  Question.h  QuestionRepo.cpp  QuestionRepo.h  README.md  User.cpp  User.h  UserRepo.cpp  UserRepo.h  ainput.txt  main.cpp  qinput.txt  questionsgui.cpp  questionsgui.h  questionsgui.ui  uinput.txt
Extra work & exams/OOP/Screenwriter App GUI/: AppError.cpp  AppError.h  CMakeLists.txt  Idea.cpp  Idea.h  IdeaRepo.cpp  IdeaRepo.h  Model.cpp  Model.h  Writer.cpp  Writer.h  WriterRepo.cpp  WriterRepo.h  main.cpp  ui_WriterGUI.h  writergui.cpp  writergui.h  writergui.ui
Extra work & exams/OOP/Task Manager App GUI/: CMakeLists.txt  (+17 more)
Facultate MegaFolder/An1/Sem2/dsa files/lab2/: App.cpp  CMakeLists.txt  MultiMap.cpp  MultiMapIterator.cpp  MultiMapIterator.h
UBB Assignments/Year1/Sem2/data structures and algo files/lab 3/: App.cpp  CMakeLists.txt  ListIterator.cpp  ListIterator.h  README.md  ShortTest.cpp  SortedIndexeList.cpp  SortedIndexedList.h
UBB Assignments/Year1/Sem2/data structures and algo files/lab 4/: CMakeLists.txt  ExtendedTest.cpp  README.md  ShortTest.cpp  SortedBag.cpp  SortedBag.h  SortedBagIterator.cpp  SortedBagIterator.h
UBB Assignments/Year1/Sem2/oop files/Assignment 8-9/: AdministratorService.cpp  AdministratorService.h  CMakeLists.txt  CSVRepository.cpp  Domain.cpp  Domain.h  FileRepository.cpp  FileRepository.h  Repository.cpp  Repository.h  UI.cpp  UI.h  UserService.cpp  UserService.h  Validator.cpp  events.txt  main.cpp  source.vcxproj  wishlist.csv  wishlist.html
(+736 files in other folders)
